package(default_visibility = ["//visibility:public"])

filegroup(
    name = "build",
    srcs = [
        "//payloads/squatter/client/cmd/squatterctl",
        "//payloads/squatter/provider:squatter-provider",
        "//payloads/squatter/windows:squatter_x86_exe",
        "//payloads/squatter/windows/src:squatter_all",
    ],
)
