load("@lint_pypi//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_test")

py_test(
    name = "checkout_test",
    size = "small",
    srcs = [
        "checkout.py",
        "checkout_test.py",
    ],
    imports = ["."],
    main = "checkout_test.py",
    python_version = "PY3",
    deps = [requirement("pytest")],
)
