load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")

package(default_visibility = ["//visibility:public"])

exports_files([
    "README.md",
    "pyproject.toml",
    "uv.lock",
])

filegroup(
    name = "sources",
    srcs = glob(["hovel_sdk/*.py"]),
)

py_binary(
    name = "build_dist",
    srcs = ["build_dist.py"],
    data = [
        "README.md",
        ":pyproject.toml",
        ":sources",
    ],
    python_version = "PY3",
)

py_library(
    name = "hovel_sdk",
    srcs = glob(["hovel_sdk/*.py"]),
    imports = ["."],
)

py_test(
    name = "hovel_sdk_test",
    size = "small",
    srcs = ["hovel_sdk/sdk_test.py"],
    imports = ["."],
    main = "hovel_sdk/sdk_test.py",
    python_version = "PY3",
    deps = [
        ":hovel_sdk",
        "@lint_pypi//pytest",
    ],
)

py_test(
    name = "mesh_bridge_test",
    size = "small",
    srcs = ["hovel_sdk/mesh_bridge_test.py"],
    imports = ["."],
    python_version = "PY3",
    deps = [
        ":hovel_sdk",
        "@lint_pypi//pytest",
    ],
)
