[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hovel-sdk"
version = "0.1.6"
description = "Python SDK for Hovel JSON-RPC modules"
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pydoclint>=0.6.10",
    "ruff>=0.14.7",
]
docs = [
    "sphinx>=8.2.3,<10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["hovel_sdk*"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401",
    "COM812",
    "D",
    "D203",
    "D213",
    "EM101",
    "EM102",
    "ISC001",
    "TC001",
    "TC003",
    "TRY003",
    "TRY300",
]

[tool.ruff.lint.per-file-ignores]
"**/*_test.py" = [
    "D100",
    "D101",
    "D102",
    "ANN",
    "PLR2004",
    "PT009",
    "S101",
]

[tool.mypy]
python_version = "3.12"
strict = true
files = [
    "hovel_sdk",
]

[tool.pydoclint]
style = "google"
exclude = '\.venv|__pycache__|.*_test\.py'
