package(default_visibility = ["//visibility:public"])

config_setting(
    name = "linux_x86_64",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
)

config_setting(
    name = "linux_aarch64",
    constraint_values = [
        "@platforms//cpu:aarch64",
        "@platforms//os:linux",
    ],
)

config_setting(
    name = "macos_x86_64",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:macos",
    ],
)

config_setting(
    name = "macos_aarch64",
    constraint_values = [
        "@platforms//cpu:aarch64",
        "@platforms//os:macos",
    ],
)

config_setting(
    name = "windows_x86_64",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:windows",
    ],
)

alias(
    name = "mdbook",
    actual = select({
        ":linux_x86_64": "@mdbook_linux_x86_64//:mdbook",
        ":linux_aarch64": "@mdbook_linux_aarch64//:mdbook",
        ":macos_x86_64": "@mdbook_macos_x86_64//:mdbook",
        ":macos_aarch64": "@mdbook_macos_aarch64//:mdbook",
        ":windows_x86_64": "@mdbook_windows_x86_64//:mdbook.exe",
    }),
)
