load("@rules_python//python:defs.bzl", "py_binary", "py_test")

package(default_visibility = ["//visibility:public"])

py_binary(
    name = "stage_examples",
    srcs = ["stage_examples.py"],
    args = [
        "--module=mock-survey-go=$(rootpath //examples/go/mock_survey:mock_survey)",
        "--module=mock-exploit-go=$(rootpath //examples/go/mock_exploit:mock_exploit)",
        "--module=mock-exploit-session-go=$(rootpath //examples/go/mock_exploit_session:mock_exploit_session)",
        "--module=mock-survey-rust=$(rootpath //examples/rust/mock_survey:mock-survey-rust)",
        "--module=mock-exploit-rust=$(rootpath //examples/rust/mock_exploit:mock-exploit-rust)",
        "--module=mock-exploit-session-rust=$(rootpath //examples/rust/mock_exploit_session:mock-exploit-session-rust)",
        "--module=squatter-provider=$(rootpath //payloads/squatter/provider:squatter-provider)",
        "--module=squatter.exe=$(rootpath //payloads/squatter/windows:squatter_x86_exe)",
    ],
    data = [
        "//examples/go/mock_exploit",
        "//examples/go/mock_exploit_session",
        "//examples/go/mock_survey",
        "//examples/rust/mock_exploit:mock-exploit-rust",
        "//examples/rust/mock_exploit_session:mock-exploit-session-rust",
        "//examples/rust/mock_survey:mock-survey-rust",
        "//payloads/squatter/provider:squatter-provider",
        "//payloads/squatter/windows:squatter_x86_exe",
    ],
    python_version = "PY3",
)

py_test(
    name = "check_in_repo_modules_test",
    size = "medium",
    srcs = ["check_in_repo_modules_test.py"],
    args = [
        "$(rootpath //cmd/hovel:hovel)",
        "$(rootpath //examples/go/mock_survey:mock_survey)",
        "$(rootpath //examples/go/mock_exploit:mock_exploit)",
        "$(rootpath //examples/go/mock_exploit_session:mock_exploit_session)",
        "$(rootpath //examples/rust/mock_survey:mock-survey-rust)",
        "$(rootpath //examples/rust/mock_exploit:mock-exploit-rust)",
        "$(rootpath //examples/rust/mock_exploit_session:mock-exploit-session-rust)",
        "$(rootpath //payloads/squatter/provider:squatter-provider)",
    ],
    data = [
        "//cmd/hovel",
        "//examples/go/mock_exploit",
        "//examples/go/mock_exploit_session",
        "//examples/go/mock_survey",
        "//examples/python:sources",
        "//examples/rust/mock_exploit:mock-exploit-rust",
        "//examples/rust/mock_exploit_session:mock-exploit-session-rust",
        "//examples/rust/mock_survey:mock-survey-rust",
        "//payloads/squatter/provider:squatter-provider",
        "//sdk/python:sources",
    ],
    python_version = "PY3",
)

py_test(
    name = "package_examples_test",
    size = "small",
    srcs = [
        "package_examples.py",
        "package_examples_test.py",
    ],
    python_version = "PY3",
)

py_test(
    name = "workspace_module_install_test",
    size = "medium",
    srcs = ["workspace_module_install_test.py"],
    args = [
        "$(rootpath //cmd/hovel:hovel)",
        "$(rootpath //examples/go/mock_survey:mock_survey)",
        "$(rootpath //examples/go/mock_exploit:mock_exploit)",
        "$(rootpath //examples/go/mock_exploit_session:mock_exploit_session)",
        "$(rootpath //examples/rust/mock_survey:mock-survey-rust)",
        "$(rootpath //examples/rust/mock_exploit:mock-exploit-rust)",
        "$(rootpath //examples/rust/mock_exploit_session:mock-exploit-session-rust)",
        "$(rootpath //payloads/squatter/provider:squatter-provider)",
    ],
    data = [
        "//cmd/hovel",
        "//examples/go/mock_exploit",
        "//examples/go/mock_exploit_session",
        "//examples/go/mock_survey",
        "//examples/python:sources",
        "//examples/rust/mock_exploit:mock-exploit-rust",
        "//examples/rust/mock_exploit_session:mock-exploit-session-rust",
        "//examples/rust/mock_survey:mock-survey-rust",
        "//payloads/squatter/provider:squatter-provider",
        "//sdk/python:sources",
    ],
    python_version = "PY3",
)
