load("@rules_python//python:defs.bzl", "py_binary", "py_test")

package(default_visibility = ["//visibility:public"])

py_binary(
    name = "render_report",
    srcs = [
        "render_report.py",
        "testreport.py",
    ],
    imports = ["."],
    main = "render_report.py",
    python_version = "PY3",
)

py_binary(
    name = "run_lint_report",
    srcs = [
        "lintreport.py",
        "run_lint_report.py",
    ],
    data = [
        "lint-report.schema.json",
        "lint_tools.json",
    ],
    imports = ["."],
    main = "run_lint_report.py",
    python_version = "PY3",
)

py_test(
    name = "lintreport_test",
    size = "small",
    srcs = [
        "lintreport.py",
        "lintreport_test.py",
    ],
    data = [
        "lint-report.schema.json",
        "lint_tools.json",
    ],
    imports = ["."],
    python_version = "PY3",
)

py_test(
    name = "testreport_test",
    size = "small",
    srcs = [
        "testreport.py",
        "testreport_test.py",
    ],
    imports = ["."],
    python_version = "PY3",
)
